react-vite/src/components/HomePage/HomePage.css
.homepage {
  display: flex;
  justify-content: space-between;
  padding: 20px;
}

.left-column,
.right-column {
  width: 45%;
}

.website-header-home {
  text-align: center;
}

.right-column {
  border: #04353e solid 1px;
  border-radius: 15px;
}

.left-column h2 {
  margin-top: 0;
}

.cocktail-grid {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
  justify-content: center;
  gap: 20px;
  padding: 20px;
}

.cocktail-search-box {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.search-buttons {
  display: flex;
  justify-content: center;
  gap: 10px;
}

.search-buttons button {
  border-radius: 5px;
  padding: 2px 10px;
  cursor: pointer;
  background-color: #04353e;
  color: #fdf2c7;
}

.search-input {
  padding: 10px;
  margin-bottom: 10px;
  border: 1px solid #04353e;
  border-radius: 4px;
}

.cocktail-search-box input {
  width: 500px;
}

.right-column {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.right-column button {
  margin-bottom: 16px;
}

.available-ingredients {
  margin: 5px 0;
  text-align: center;
}

.ingredient-columns {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
}

.ingredient-column {
  flex: 1;
  min-width: 70px;
  margin: 5px;
}

.ingredient-list {
  display: flex;
  flex-direction: column;
  gap: 10px;
}

.ingredient-button {
  padding: 10px 15px;
  border: none;
  border-radius: 8px;
  color: #fdf2c7;
  background-color: #04353e;
  cursor: pointer;
  transition: background-color 0.3s ease;
  text-align: center;
}

.ingredient-button.selected {
  background-color: #b4990181;
  color: #04353e;
}

.ingredient-button:hover {
  background-color: #b4990181;
  color: #04353e;
}

